--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script lang="js" src="extracodes.js"></script>
     <script lang="js" src="animacoes.js"></script>
+    <link rel="shortcut icon" href="Images/D (1).png" type="image/x-icon">
     <link rel="stylesheet" href="css.css">
-    <title>Document</title>
+    <title>Diogo Penharbel</title>
 </head>
 <body onload="topdivS()">
     
     <div id="div1" style="display: flex; justify-content: space-between; background-color: white;">
 
         <div id="divText">
-            <h1 style="color: rgb(0, 17, 10);">Diogo Penharbel da Slva Tubero</h1>
+            <h1 style="color: rgb(0, 17, 10);">Diogo Penharbel</h1>
             <p style="color: rgb(0, 37, 22); text-align: center;">Ola! Sou um programador front-end com pouca experiência de trabalho, durante este portifólio voce pode ver alguns trabalhos que eu tive durante a escola <br> e alguns jobs que fiz no tempo livre </p>
 
             <div onclick="butao1()" style="width: 110px; height: 110px;"><button onclick="butao1()" id="botaoSc"><p style="position: relative;">Vamos?</p></button></div>
