--- a/index.html
+++ b/index.html
@@ -11,48 +11,48 @@
 </head>
 <body onload="topdivS()">
     
-<main id="greendiv" style="width: 1280px; height: 1400px; background-color: rgb(0, 10, 3);"></main>
+    <main id="greendiv" style="width: 1280px; height: 1400px; background-color: rgb(0, 10, 3);"></main>
 
-    <div id="div1" >
-        <div id="divText">
-            <h1 style="color: rgb(0, 17, 10);">Diogo Penharbel</h1>
-            <p style="color: rgb(0, 37, 22); text-align: center;">Ola! Sou um programador front-end com pouca experiência de trabalho, durante este portifólio voce pode ver alguns trabalhos que eu tive durante a escola <br> e alguns jobs que fiz no tempo livre </p>
+        <div id="div1" >
+            <div id="divText">
+                <h1 style="color: rgb(0, 17, 10);">Diogo Penharbel</h1>
+                <p style="color: rgb(0, 37, 22); text-align: center;">Ola! Sou um programador front-end com pouca experiência de trabalho, durante este portifólio voce pode ver alguns trabalhos que eu tive durante a escola <br> e alguns jobs que fiz no tempo livre </p>
 
-            <div onclick="butao1()" id="btn"><button onclick="butao1()" id="botaoSc"><p style="position: relative;">Vamos?</p></button></div>
+                <div onclick="butao1()" id="btn"><button onclick="butao1()" id="botaoSc"><p style="position: relative;">Vamos?</p></button></div>
+            </div>
+            <img id="foto" src="Images/fotor-ai-2023102395425.jpg" alt="minha-foto-;o">
         </div>
-        <img id="foto" src="Images/fotor-ai-2023102395425.jpg" alt="minha-foto-;o">
-    </div>
 
-    <!-------------------------------------Quem sou----------------------------------------->
-    <div id="topdiv" >
-    <div id="colordiv"></div>
-        <div onmouseenter="TrianguloTam()" onmouseleave="TrianguloTim()" onclick="constroi()" id="triangulo"><img style="position: absolute;" onclick="constroi()" id="topPrincipal" src="Images/icon_contato.png" alt="Contato"></div>
-            <div id="divImg1"><img src="Images/whatsapp-icone-2.png" alt="Wpp" id="imgWpp"></div>
-            <div id="divImg2"><img src="Images/githubicon.png" alt="github" id="imgGitH"></div>
-            <div id="divImg3"><img src="Images/gmail.png" alt="gmail" id="imgGmail"></div>
-    </div>
-
-    <!-------------------------------------projetos----------------------------------------->
-    <div style="margin-top: 200px; margin-bottom: 300px; height: 700px;">
-        <div style=" margin-top: 100px;">
-            <div style="width: 1280; height: 5px; background-color: #ec911a;"></div>
-            <h1 id="h1tech">Tecnologias</h1>
+        <!-------------------------------------Quem sou----------------------------------------->
+        <div id="topdiv" >
+        <div id="colordiv"></div>
+            <div onmouseenter="TrianguloTam()" onmouseleave="TrianguloTam()" onclick="constroi()" id="triangulo"><img style="position: absolute;" onclick="constroi()" id="topPrincipal" src="Images/icon_contato.png" alt="Contato"></div>
+                <div id="divImg1"><img src="Images/whatsapp-icone-2.png" alt="Wpp" id="imgWpp"></div>
+                <div id="divImg2"><img src="Images/githubicon.png" alt="github" id="imgGitH"></div>
+                <div id="divImg3"><img src="Images/gmail.png" alt="gmail" id="imgGmail"></div>
         </div>
-        <div>
-            <img src="Images/css_icon.png" alt="">
-            <img src="Images/html_icones.png" alt="">
-            <img src="Images/javascript-icon.png" alt="">
-            <img src="Images/C_sharp.png" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+
+        <!-------------------------------------projetos----------------------------------------->
+        <div style="margin-top: 200px; margin-bottom: 300px; height: 700px;">
+            <div style=" margin-top: 100px;">
+                <div style="width: 1280; height: 5px; background-color: #ec911a;"></div>
+                <h1 id="h1tech">Tecnologias</h1>
+            </div>
+            <div>
+                <img src="Images/css_icon.png" alt="">
+                <img src="Images/html_icones.png" alt="">
+                <img src="Images/javascript-icon.png" alt="">
+                <img src="Images/C_sharp.png" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
         </div>
-    </div>
 
-    <!-------------------------------------Formação----------------------------------------->
-    <div style="background-color: #daa700; width: 1280px; height: 500px;">
-    </div>
+        <!-------------------------------------Formação----------------------------------------->
+        <div style="background-color: #daa700; width: 1280px; height: 500px;">
+        </div>
 
-</main>
+    </main>
 
     <!-----verde principal rgb(0, 10, 3)------>
     
