--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-------------------------------------Quem sou----------------------------------------->
         <div id="topdiv" >
         <div id="colordiv"></div>
-            <div onmouseenter="TrianguloTam()" onmouseleave="TrianguloTam()" onclick="constroi()" id="triangulo"><img style="position: absolute;" onclick="constroi()" id="topPrincipal" src="Images/icon_contato.png" alt="Contato"></div>
+            <div onmouseenter="TrianguloTam()" onmouseleave="TrianguloTam()" onclick="contatosAnim(), block()" id="triangulo"><img style="position: absolute;" id="topPrincipal" src="Images/icon_contato.png" alt="Contato"></div>
                 <div id="divImg1"><img src="Images/whatsapp-icone-2.png" alt="Wpp" id="imgWpp"></div>
                 <div id="divImg2"><img src="Images/githubicon.png" alt="github" id="imgGitH"></div>
                 <div id="divImg3"><img src="Images/gmail.png" alt="gmail" id="imgGmail"></div>
