Inicio_dos_projetos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="div1" >
             <div id="divText">
                 <h1 style="color: rgb(0, 17, 10);">Diogo Penharbel</h1>
-                <p style="color: rgb(0, 37, 22); text-align: center;">Ola! Sou um programador front-end com pouca experiência de trabalho, durante este portifólio voce pode ver alguns trabalhos que eu tive durante a escola <br> e alguns jobs que fiz no tempo livre </p>
+                <p style="color: rgb(0, 37, 22); text-align: center;">Sou um programador front-end engressando na carreira, tenho afinidade com artes o que me dá uma vantagem com abstrações além de ter facilidade com numeros o que ajuda na lógica e desenvolvimento de sistemas web.</p>
 
                 <div onclick="butao1()" id="btn"><button onclick="butao1()" id="botaoSc"><p style="position: relative;">Vamos?</p></button></div>
             </div>
@@ -27,25 +27,18 @@
         <div id="topdiv" >
         <div id="colordiv"></div>
             <div onmouseenter="TrianguloTam()" onmouseleave="TrianguloTam()" onclick="contatosAnim(), block()" id="triangulo"><img style="position: absolute;" id="topPrincipal" src="Images/icon_contato.png" alt="Contato"></div>
-                <div id="divImg1"><img src="Images/whatsapp-icone-2.png" alt="Wpp" id="imgWpp"></div>
-                <div id="divImg2"><img src="Images/githubicon.png" alt="github" id="imgGitH"></div>
-                <div id="divImg3"><img src="Images/gmail.png" alt="gmail" id="imgGmail"></div>
+                <div class="divImg" id="divImg1"><img src="Images/whatsapp-icone-2.png" alt="Wpp" id="imgWpp"></div>
+                <div class="divImg" id="divImg2"><img src="Images/githubicon.png" alt="github" id="imgGitH"></div>
+                <div class="divImg" id="divImg3"><img src="Images/gmail.png" alt="gmail" id="imgGmail"></div>
         </div>
 
         <!-------------------------------------projetos----------------------------------------->
-        <div style="margin-top: 200px; margin-bottom: 300px; height: 700px;">
-            <div style=" margin-top: 100px;">
-                <div style="width: 1280; height: 5px; background-color: #ec911a;"></div>
-                <h1 id="h1tech">Tecnologias</h1>
-            </div>
-            <div>
-                <img src="Images/css_icon.png" alt="">
-                <img src="Images/html_icones.png" alt="">
-                <img src="Images/javascript-icon.png" alt="">
-                <img src="Images/C_sharp.png" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
+        <h1 id="h1projetos">Projetos</h1>
+        <div id="projetosDiv">
+            <div class="projetos">a</div>
+            <div class="projetos">a</div>
+            <div class="projetos">a</div>
+            <div class="projetos">a</div>
         </div>
 
         <!-------------------------------------Formação----------------------------------------->
