--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script lang="js" src="animacoes.js"></script>
     <link rel="shortcut icon" href="Images/D (1).png" type="image/x-icon">
     <link rel="stylesheet" href="css.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,800&display=swap" rel="stylesheet">
     <title>Diogo Penharbel</title>
 </head>
 <body onload="topdivS()">
