--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body onload="topdivS()">
     
-    <main id="greendiv" style="width: 1280px; height: 1400px; background-color: rgb(0, 10, 3);"></main>
+    <main id="greendiv" style="width: 1280px; height: 2500px; background-color: rgb(0, 10, 3);"></main>
 
         <div id="div1" >
             <div id="divText">
@@ -38,10 +38,8 @@
         <!-------------------------------------projetos----------------------------------------->
         <h1 id="h1projetos">Projetos</h1>
         <div id="projetosDiv">
-            <div class="projetos">a</div>
-            <div class="projetos">a</div>
-            <div class="projetos">a</div>
-            <div class="projetos">a</div>
+            <div class="projetos" id="projeto1">a</div>
+
         </div>
 
         <!-------------------------------------Formação----------------------------------------->
